# xz

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
build-aux/: version.sh
debug/: Makefile.am  crc32.c  full_flush.c  known_sizes.c  memusage.c  sync_flush.c
doc/examples/: 01_compress_easy.c  02_decompress.c  03_compress_custom.c  04_compress_easy_mt.c  11_file_info.c  Makefile
doc/examples_old/: xz_pipe_comp.c  xz_pipe_decomp.c
dos/: Makefile  config.h
macosx/: build.sh
src/common/: atomic.h  common_w32res.rc  sysdefs.h  tuklib_integer.h
src/liblzma/: Makefile.am  liblzma.map  liblzma.pc.in  validate_map.sh
src/liblzma/api/: Makefile.am  flzma.h
src/liblzma/api/flzma/: base.h  bcj.h  block.h  check.h  container.h  delta.h  filter.h  hardware.h  index.h  index_hash.h  lzma12.h  stream_flags.h  version.h  vli.h
src/liblzma/api/lzma/: base.h  bcj.h  block.h  check.h  container.h  delta.h  filter.h  hardware.h  index.h  index_hash.h  lzma12.h  stream_flags.h  version.h  vli.h
src/liblzma/check/: Makefile.inc
src/liblzma/common/: Makefile.inc  block_buffer_encoder.c  block_encoder.c  common.c  common.h  file_info.c  filter_decoder.c  memcmplen.h  stream_encoder.c
src/liblzma/delta/: Makefile.inc
src/liblzma/fast-lzma2/: Makefile.inc  atomic.h  data_block.h  fast-lzma2.h  fastpos_table.h  fl2_compress.c  lzma2_dec.c  lzma2_enc.c  lzma2_enc.h  lzma_dec_x86_64.S  lzma_dec_x86_64.asm  radix_bitpack.c  radix_engine.h  radix_get.h  radix_internal.h  radix_mf.c  radix_mf.h  radix_struct.c  range_enc.c  range_enc.h
src/liblzma/lz/: Makefile.inc  lz_decoder.h  lz_encoder.c
src/liblzma/lzma/: Makefile.inc  data_block.h  fastpos.h  lzma2_encoder.c  lzma2_encoder_rmf.c  lzma2_encoder_rmf.h  lzma2_fast_decoder.c  lzma2_fast_decoder.h  lzma2_fast_encoder.c  lzma2_fast_encoder.h  lzma_common.h  lzma_dec_x86_64.S  lzma_decoder.c  lzma_encoder.c  lzma_encoder_optimum_normal.c  lzma_encoder_presets.c  lzma_encoder_private.h
src/liblzma/radix/: Makefile.inc  radix_bitpack.c  radix_engine.h  radix_get.h  radix_internal.h  radix_mf.c  radix_mf.h  radix_struct.c
src/liblzma/rangecoder/: Makefile.inc  price.h  price_table.c  price_tablegen.c  range_common.h  range_fast_enc.c  range_fast_enc.h
src/liblzma/simple/: Makefile.inc
src/lzmainfo/: Makefile.am  lzmainfo.c  lzmainfo_w32res.rc
src/scripts/: Makefile.am  fxzdiff.in  fxzgrep.in  fxzless.in  fxzmore.in
src/xz/: Makefile.am  args.c  args.h  coder.c  coder.h  file_io.h  fxz.1  list.c  message.c  options.c  private.h  xz_w32res.rc
src/xzdec/: Makefile.am  fxzdec.1  lzmadec_w32res.rc  xzdec.c  xzdec_w32res.rc
tests/: Makefile.am  test_compress.sh  test_files.sh  test_scripts.sh  tests.h  xzgrep_expected_output
tests/ossfuzz/: Makefile  fuzz.c
windows/: build.bash
windows/vs2013/: config.h
windows/vs2017/: config.h  liblzma_dll.vcxproj  xz_win.sln
