##
## Author: Lasse Collin
##
## This file has been put into the public domain.
## You can do whatever you want with this file.
##

nobase_include_HEADERS = \
	flzma.h \
	flzma/base.h \
	flzma/bcj.h \
	flzma/block.h \
	flzma/check.h \
	flzma/container.h \
	flzma/delta.h \
	flzma/filter.h \
	flzma/hardware.h \
	flzma/index.h \
	flzma/index_hash.h \
	flzma/lzma12.h \
	flzma/stream_flags.h \
	flzma/version.h \
	flzma/vli.h
